--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,7 @@
 
 @font-face {
     font-family: 'Archivo';
-    src: url('/font/Archivo/Archivo-Italic-VariableFont_wdth,wght.ttf') format('truetype');
+    src: url('/font/Archivo/Archivo-VariableFont_wdth,wght.ttf') format('truetype');
     font-weight: 100 900;
     font-style: italic;
 }
@@ -32,9 +32,8 @@
     font-style: italic;
 }
 
-/* Gilroy (using Inter as fallback) */
 @font-face {
-    font-family: 'Gilroy';
+    font-family: 'Inter';
     src: url('/font/Inter/Inter-VariableFont_opsz,wght.ttf') format('truetype');
     font-weight: 100 900;
     font-style: normal;
